--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,12 +7,16 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-libcypher-parser-sys = "^0.6.1-1"
-thiserror = "1.0.20"
+bitmask = "0.5.0"
+errno = "0.2.6"
+libc = "0.2.77"
+libcypher-parser-sys = "0.6.1-1"
+memalloc = "0.1.0"
+mopa = "0.2.2"
 num = "0.3.0"
 num-derive = { version = "0.3.2", features = ["full-syntax"] }
 num-traits = "0.2.12"
-errno = "0.2.6"
-memalloc = "0.1.0"
-bitmask = "0.5.0"
 paste = "1.0.1"
+strum = "0.19.2"
+strum_macros = "0.19.2"
+thiserror = "1.0.20"
