--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2018"
 
 [dependencies]
 bitmask = "0.5.0"
+boolinator = "2.4.0"
 errno = "0.2.6"
 libc = "0.2.77"
 libcypher-parser-sys = "0.6.1-1"
